# haywire

./: .gitignore  CLAUDE.md  CONFIG_REDESIGN.md  DOCSTRING_CLEANUP_FLAGS.md  DOCSTRING_CLEANUP_LOG.md  LICENSE  README.md  app_graph_canvas.py  marketplace.toml  mkdocs.yml  open_issues.md  pyproject.toml  pytest.ini  run_test_app.py  test_undo_app.py  test_undo_app_canvas.py  test_undo_app_di.py
barn/haybale-TEST_A/: pyproject.toml
barn/haybale-TEST_A/haybale_test_a/: __init__.py
barn/haybale-TEST_A/haybale_test_a/adapters/: compound_adapters.py
barn/haybale-TEST_A/haybale_test_a/types/: __init__.py  data.py  maps_string_type.py
barn/haybale-core/: README.md  pyproject.toml
barn/haybale-core/haybale_core/: __init__.py
barn/haybale-core/haybale_core/adapters/: __init__.py  basic_adapters.py  compound_adapters.py
barn/haybale-core/haybale_core/nodes/: __init__.py  begin_play.py  custom_callback.py  emit_callback.py  error_node.py  for_loop.py  merge_callback.py  print_node.py  print_terminal.py  print_ui_log.py  shutdown.py  switch.py  tick.py  tick_emit.py
barn/haybale-core/haybale_core/panels/: NodeUISettingsPanel.py  _settings_panel_base.py  canvas_settings.py  edge_info_panel.py  edge_panels.py  graph_info_panel.py  node_ports_panel.py  node_properties_panel.py  node_props_panel.py  node_settings.py  node_settings_bags_panel.py  node_status.py  settings_canvas_panels.py
barn/haybale-core/haybale_core/settings/: node_skin_settings.py  ui_node.py
barn/haybale-core/haybale_core/skins/: default_skin.py  error_skin.py  node_skin.py
barn/haybale-core/haybale_core/themes/: __init__.py  node.py  workbench.py
barn/haybale-core/haybale_core/types/: __init__.py  array_type.py  pooled_type.py  specs.py
barn/haybale-core/haybale_core/widgets/: __init__.py  basic_widgets.py  display_widgets.py
barn/haybale-example/: README.md  pyproject.toml
barn/haybale-example/haybale_example/: __init__.py
barn/haybale-example/haybale_example/adapters/: __init__.py  compound_adapters.py
barn/haybale-example/haybale_example/nodes/: __init__.py  math_op.py
barn/haybale-example/haybale_example/skins/: example_skin.py
barn/haybale-example/haybale_example/types/: __init__.py  maps_string_type.py  math.py  specs.py
barn/haybale-example/haybale_example/widgets/: __init__.py  example_widget.py  knob_widget.py
barn/haybale-graph-editor/: README.md  pyproject.toml
barn/haybale-graph-editor/haybale_graph_editor/: __init__.py  focuses.py  protocols.py
barn/haybale-graph-editor/haybale_graph_editor/editors/: graph_editor.py  node_status.py
barn/haybale-graph-editor/haybale_graph_editor/panels/: edge_panels.py  graph_info_panel.py  node_ports_panel.py  node_props_panel.py  node_settings.py
barn/haybale-graph-editor/haybale_graph_editor/state/: graph_app_state.py
barn/haybale-haystack/: pyproject.toml
barn/haybale-haystack/haybale_haystack/: __init__.py  graph_entry.py  persistence.py  signals.py
barn/haybale-haystack/haybale_haystack/editors/: graph_editor.py  haystack_editor.py
barn/haybale-haystack/haybale_haystack/panels/: haystack_settings_panel.py  open_in_haystack.py
barn/haybale-haystack/haybale_haystack/settings/: haystack_settings.py
barn/haybale-haystack/haybale_haystack/state/: haystack_state.py
barn/haybale-marketplace/: pyproject.toml
barn/haybale-marketplace/haybale_marketplace/: __init__.py  library_manager.py
barn/haybale-marketplace/haybale_marketplace/editors/: __init__.py  component_source_editor.py  library_browser_editor.py  library_component_editor.py  library_marketplace_dialog.py  library_overview_editor.py
barn/haybale-marketplace/haybale_marketplace/state/: __init__.py  library_enable_state.py  library_manager_state.py  marketplace_state.py
barn/haybale-studio/: pyproject.toml
barn/haybale-studio/haybale_studio/: __init__.py  file_focus.py  focuses.py  loop_scheduler.py
barn/haybale-studio/haybale_studio/editors/: __init__.py  _context_menu_base.py  code_editor.py  component_source_editor.py  console_editor.py  file_browser.py  file_viewer.py  graph_editor.py  graph_manager_editor.py  haystack_editor.py  lazy_file_browser.py  library_browser_editor.py  library_component_editor.py  library_marketplace_dialog.py  library_overview_editor.py  node_source_editor.py  properties_editor.py  properties_editor_actions.py  scopes.py  terminal_editor.py
barn/haybale-studio/haybale_studio/panels/: __init__.py  _settings_panel_base.py  app_panels.py  canvas_settings.py  debug_panel.py  edge_info_panel.py  edge_panels.py  execution_panel.py  focuses.py  graph_info_panel.py  node_ports_panel.py  node_properties_panel.py  node_props_panel.py  node_settings.py  node_settings_bags_panel.py  node_settings_panel.py  node_status.py  settings_app_panels.py  settings_canvas_panels.py  settings_debug_panel.py  settings_execution_panel.py
barn/haybale-studio/haybale_studio/settings/: debug.py  editor.py  execution.py  node_skin_settings.py  theme_settings.py  ui_canvas.py  ui_edge.py  ui_minimap.py  ui_node.py  workbench.py
barn/haybale-studio/haybale_studio/skins/: default_skin.py  error_skin.py  node_skin.py
barn/haybale-studio/haybale_studio/state/: __init__.py  edit_state.py  file_browser_state.py  (+1 more)
barn/haybale-testing/: pyproject.toml
barn/haybale-testing/haybale_testing/: __init__.py  test_actions.py  test_focuses.py
barn/haybale-visiongraph/: README.md  pyproject.toml
barn/haybale-visiongraph/haybale_visiongraph/: OVERVIEW.md  QUICKREF.md  __init__.py
libraries/haybale-TEST_A/: README.md  pyproject.toml
libraries/haybale-TEST_A/haybale_test_a/: __init__.py
libraries/haybale-example/: pyproject.toml
libraries/haybale-example/haybale_example/: __init__.py
libraries/haybale-visiongraph/: OVERVIEW.md  QUICKREF.md  pyproject.toml
libraries/haybale-visiongraph/haybale_visiongraph/: __init__.py
libraries/haywire-example/: README.md  pyproject.toml
tests/libraries/haybale-TEST_B/: pyproject.toml
tests/libraries/haywire-TEST_A/: README.md  pyproject.toml
tests/libraries/haywire-TEST_B/: README.md  pyproject.toml
(+1135 files in other folders)
