[project]
name = "haywire-workspace"
version = "0.0.1"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "packages/*",
    "barn/*",
]

[tool.uv.sources]
haywire-core = { workspace = true }
haywire-studio = { workspace = true }
haybale-core = { workspace = true }
haybale-studio = { workspace = true }
haybale-example = { workspace = true }
haybale-testing = { workspace = true }
haybale-visiongraph = { workspace = true }
haybale-TEST_A = { workspace = true }
haybale-haystack = { workspace = true }
haybale-graph-editor = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "pyinstaller>=6.14.1",
    "playwright",
    "pytest-playwright",
    "requests",
    "haywire-core",
    "haywire-studio",
    "haybale-core",
    "haybale-studio",
    "haybale-example",
    "haybale-testing",
    "haybale-visiongraph",
    "haybale-TEST_A",
    "haybale-haystack",
    "haybale-graph-editor",
    "mkdocs-material>=9.7.6",
]

[tool.mypy]
python_version = "3.10"
mypy_path = [
    "packages/haywire-core/src",
    "packages/haywire-studio/src",
    "barn/haybale-core",
    "barn/haybale-studio",
    "barn/haybale-testing",
    "barn/haybale-example",
    "barn/haybale-visiongraph",
    "barn/haybale-TEST_A",
    "barn/haybale-haystack",
    "barn/haybale-graph-editor",
]

[[tool.mypy.overrides]]
module = ["toml", "nicegui.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 109
exclude = ["playground/"]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, full system)",
    "slow: Slow running tests",
    "ui: UI-related tests",
    "core: Core functionality tests",
]
addopts = "-v --strict-markers --tb=short --maxfail=5"

[tool.haywire.release]
# Canonical machine-readable list of releasable packages.
# Consumed by: scripts/bump_version.py (this repo),
#              scripts/generate_marketstall.py (separate plan),
#              .github/workflows/publish.yml (separate plan).
# Order is significant for the publish workflow: dependencies first.
# If this disagrees with the §5 table in
# internals/specs/versioning-and-publishing.md, this block wins.

# Packages published to PyPI on every release tag, in dependency order.
publish_order = [
    "haywire-core",
    "haywire-studio",
    "haybale-core",
    "haybale-studio",
    "haybale-graph-editor",
    "haybale-haystack",
    "haybale-example",
]

# Packages versioned in lockstep with the release but NOT published.
# The bump script updates these too so internal users stay coherent.
# - haybale-visiongraph: Tier 2 git-only (binary deps, deferred from PyPI).
# - haybale-testing, haybale-TEST_A: Tier 3 internal test fixtures.
lockstep_unpublished = [
    "haybale-visiongraph",
    "haybale-testing",
    "haybale-TEST_A",
]
