[project]
name = "haywire-workspace"
version = "0.0.1"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.uv.workspace]
members = [
    "packages/*",
    "barn/*",
]

[tool.uv.sources]
haywire-core = { workspace = true }
haywire-studio = { workspace = true }
haybale-core = { workspace = true }
haybale-studio = { workspace = true }
haybale-example = { workspace = true }
haybale-testing = { workspace = true }
haybale-visiongraph = { workspace = true }
haybale-TEST_A = { workspace = true }
haybale-haystack = { workspace = true }
haybale-graph-editor = { workspace = true }
haybale-marketplace = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "pyinstaller>=6.14.1",
    "playwright",
    "pytest-playwright",
    "requests",
    "haywire-core",
    "haywire-studio",
    "haybale-core",
    "haybale-studio",
    "haybale-example",
    "haybale-testing",
    "haybale-visiongraph",
    "haybale-TEST_A",
    "haybale-haystack",
    "haybale-graph-editor",
    "haybale-marketplace",
    "mkdocs-material>=9.7.6",
]

[tool.mypy]
python_version = "3.10"
mypy_path = [
    "packages/haywire-core/src",
    "packages/haywire-studio/src",
    "barn/haybale-core",
    "barn/haybale-studio",
    "barn/haybale-testing",
    "barn/haybale-example",
    "barn/haybale-visiongraph",
    "barn/haybale-TEST_A",
    "barn/haybale-haystack",
    "barn/haybale-graph-editor",
    "barn/haybale-marketplace",
]

[[tool.mypy.overrides]]
module = ["toml", "nicegui.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 109
exclude = ["playground/"]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, full system)",
    "slow: Slow running tests",
    "ui: UI-related tests",
    "core: Core functionality tests",
]
addopts = "-v --strict-markers --tb=short --maxfail=5"

[tool.haywire.release]
# Canonical machine-readable list of releasable packages.
# Consumed by: scripts/bump_version.py (this repo),
#              scripts/generate_marketstall.py (separate plan),
#              .github/workflows/publish.yml (separate plan).
# Order is significant for the publish workflow: dependencies first.
# If this disagrees with the §5 table in
# internals/specs/versioning-and-publishing.md, this block wins.

# Packages published to PyPI on every release tag, in dependency order.
publish_order = [
    "haywire-core",
    "haywire-studio",
    "haybale-core",
    "haybale-studio",
    "haybale-marketplace",
    "haybale-graph-editor",
    "haybale-haystack",
]

# Packages versioned in lockstep with the release but NOT published.
# The bump script updates these too so internal users stay coherent.
# - haybale-visiongraph: Tier 2 git-only (binary deps, deferred from PyPI).
# - haybale-testing, haybale-TEST_A: Tier 3 internal test fixtures.
lockstep_unpublished = [
    "haybale-visiongraph",
    "haybale-example",
    "haybale-testing",
    "haybale-TEST_A",
]

[tool.haywire.marketstall]
# Configuration for scripts/generate_marketstall.py.
# Consumed by the marketplace generator (T3) and the CI publish workflow (T4).

# Repo URL used as the `source_url` for every generated [[packages]] entry.
# Also forms the base for the `docs_url` raw-githubusercontent URL.
source_url = "https://github.com/maybites/haywire"

# Default branch used in the raw-githubusercontent docs_url. Update if
# the repo's primary branch ever moves.
docs_branch = "main"

# Default author and tags applied when a package's @library decorator
# doesn't set them. Per-package values from the decorator always win.
default_author = "Haywire Team"
default_tags = []

# Base URL where the deployed feed lives. The generator composes the per-stall
# subscription URLs as "{feed_base_url}/stalls/{dist-name}.toml". For the
# official GitHub-Pages-hosted feed: https://maybites.github.io/haywire
feed_base_url = "https://maybites.github.io/haywire"
