[project]
name = "haywire-workspace"
version = "0.0.1"
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.uv.workspace]
members = [
    "packages/*",
    "barn/*",
]

[tool.uv.sources]
haywire-core = { workspace = true }
haywire-studio = { workspace = true }
haybale-core = { workspace = true }
haybale-studio = { workspace = true }
haybale-example = { workspace = true }
haybale-testing = { workspace = true }
haybale-visiongraph = { workspace = true }
haybale-TEST_A = { workspace = true }
haybale-haystack = { workspace = true }
haybale-graph-editor = { workspace = true }
haybale-marketplace = { workspace = true }

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "ruff",
    "pyinstaller>=6.14.1",
    "playwright",
    "pytest-playwright",
    "requests",
    "haywire-core",
    "haywire-studio",
    "haybale-core",
    "haybale-studio",
    "haybale-example",
    "haybale-testing",
    "haybale-visiongraph",
    "haybale-TEST_A",
    "haybale-haystack",
    "haybale-graph-editor",
    "haybale-marketplace",
    "mkdocs-material>=9.7.6",
    "deptry>=0.25.1",
]

[tool.mypy]
python_version = "3.10"
mypy_path = [
    "packages/haywire-core/src",
    "packages/haywire-studio/src",
    "barn/haybale-core",
    "barn/haybale-studio",
    "barn/haybale-testing",
    "barn/haybale-example",
    "barn/haybale-visiongraph",
    "barn/haybale-TEST_A",
    "barn/haybale-haystack",
    "barn/haybale-graph-editor",
    "barn/haybale-marketplace",
]

[[tool.mypy.overrides]]
module = ["toml", "nicegui.*"]
ignore_missing_imports = true

[tool.ruff]
line-length = 109
exclude = ["playground/"]

[tool.ruff.lint]
extend-select = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "unit: Unit tests (fast, isolated)",
    "integration: Integration tests (slower, full system)",
    "slow: Slow running tests",
    "ui: UI-related tests",
    "core: Core functionality tests",
]
addopts = "-v --strict-markers --tb=short --maxfail=5"

[tool.haywire.release]
# Canonical machine-readable list of releasable packages.
# Consumed by: scripts/bump_version.py (this repo),
#              scripts/generate_marketstall.py,
#              .github/workflows/publish.yml.
# Order is significant for the publish workflow: dependencies first.

# Packages published to PyPI on every release tag, in dependency order.
pip_publish_order = [
    "haywire-core",
    "haywire-studio",
    "haybale-core",
    "haybale-studio",
    "haybale-marketplace",
    "haybale-graph-editor",
    "haybale-haystack",
]

# Packages published via git subdirectory URL (binary deps or deferred from PyPI).
# Versioned in lockstep; installed as git+<source_url>#subdirectory=<pkg dir>.
git_publish_order = []

# Packages versioned in lockstep with the release but NOT published anywhere.
# The bump script updates these too so internal users stay coherent.
lockstep_unpublished = [
    "haybale-example",
    "haybale-testing",
    "haybale-TEST_A",
    "haybale-visiongraph",
]

[tool.haywire.marketstall]
# Configuration for scripts/generate_marketstall.py.
# Consumed by the marketplace generator and the CI publish workflow.

# Repo URL used as the `source_url` for every generated [[haybales]] entry.
# Also forms the base for the `docs_url` raw-githubusercontent URL.
source_url = "https://github.com/going-haywire/haywire"

# Default branch used in the raw-githubusercontent docs_url.
docs_branch = "main"

# Default author and tags applied when a package's @library decorator
# doesn't set them. Per-package values from the decorator always win.
default_author = "Haywire Team"
default_tags = []

# Base URL where the deployed feed lives. The generator composes the per-stall
# subscription URLs as "{feed_base_url}/stalls/{dist-name}.toml".
feed_base_url = "https://going-haywire.github.io/haywire"

# Explicit allowlist of packages that appear in the official marketplace feed,
# in the order they appear in the feed. Source (pypi vs git) is derived by
# lookup against pip_publish_order / git_publish_order above.
# Rules enforced at generation time:
#   - Every entry here must be in pip_publish_order or git_publish_order.
#   - No package may be in both pip_publish_order and git_publish_order.
marketplace = [
    "haybale-core",
    "haybale-studio",
    "haybale-marketplace",
    "haybale-graph-editor",
    "haybale-haystack",
]
