[project]
name = "haybale-TEST_A"
version = "0.0.11"
description = "Test library for Haywire node system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "test"]

dependencies = ["haywire-core~=0.0.11"]

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
test_a = "haybale_test_a:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_test_a"]

[tool.hatch.build.targets.sdist]
include = [
    "haybale_test_a/",
    "README.md",
]
