[project]
name = "haybale-core"
version = "0.0.7"
description = "Haywire's core library with types, nodes, widgets, and renderers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "core"]

dependencies = [
    "haywire-core~=0.0.7",
    "nicegui>=3.12.1",
    "typing_extensions"]

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
core = "haybale_core:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_core"]

[tool.uv.sources]
haywire-core = { workspace = true }

[tool.hatch.build.targets.sdist]
include = [
    "haybale_core/",
    "README.md",
]
