[project]
name = "haybale-graph-editor"
version = "0.1.0"
description = "Graph editor library for Haywire — host-agnostic visual graph editing"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "haywire-core>=0.1.0",
    "haywire-studio>=0.1.0",
    "haybale-core>=0.1.0",
    "haybale-studio>=0.1.0",
]

[project.entry-points."haywire.libraries"]
graph_editor = "haybale_graph_editor:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_graph_editor"]

[tool.uv.sources]
haywire-core = { workspace = true }
haywire-studio = { workspace = true }
haybale-core = { workspace = true }
haybale-studio = { workspace = true }
