[project]
name = "haybale-graph-editor"
version = "0.0.7"
description = "Graph editor library for Haywire — host-agnostic visual graph editing"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "haywire-core~=0.0.7",
    "nicegui>=3.12.1",
]

[project.entry-points."haywire.libraries"]
graph_editor = "haybale_graph_editor:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_graph_editor"]
