[project]
name = "haybale-haystack"
version = "0.1.0"
description = "Haystack — file-centric multi-graph manager for Haywire"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "haywire-core>=0.1.0",
    "haywire-studio>=0.1.0",
    "haybale-core>=0.1.0",
    "haybale-studio>=0.1.0",
]

[project.entry-points."haywire.libraries"]
haystack = "haybale_haystack:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_haystack"]

[tool.uv.sources]
haywire-core = { workspace = true }
haywire-studio = { workspace = true }
haybale-core = { workspace = true }
haybale-studio = { workspace = true }
