[project]
name = "haybale-haystack"
version = "0.0.6"
description = "Haystack — file-centric multi-graph manager for Haywire"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "haywire-core~=0.0.6",
    "haybale-studio~=0.0.6",
    "haybale-graph-editor~=0.0.6",
    "nicegui>=3.12.1",
    "toml>=0.10.2",
]

[project.entry-points."haywire.libraries"]
haystack = "haybale_haystack:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_haystack"]

[tool.uv.sources]
haywire-core = { workspace = true }
haywire-studio = { workspace = true }
haybale-core = { workspace = true }
haybale-studio = { workspace = true }
haybale-graph-editor = { workspace = true }
