[project]
name = "haybale-marketplace"
version = "0.0.12"
description = "Library installer + browser editors for Haywire"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "haywire-core~=0.0.12",
    "haywire-studio~=0.0.12",
    "haybale-studio~=0.0.12",
    "toml",
    "nicegui>=3.12.1",
    "packaging",
]

[project.entry-points."haywire.libraries"]
marketplace = "haybale_marketplace:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_marketplace"]
