[project]
name = "haybale-studio"
version = "0.0.6"
description = "haywire studio library for basic functionality"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "haywire-core~=0.0.6",
    "nicegui>=3.12.1",
]

[project.entry-points."haywire.libraries"]
studio = "haybale_studio:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_studio"]

[tool.uv.sources]
haywire-core = { workspace = true }
haywire-studio = { workspace = true }
haybale-core = { workspace = true }