[project]
name = "haybale-testing"
version = "0.1.0"
description = "Testing library for Haywire node system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "test"]

dependencies = ["haybale-core>=0.1.0", "haybale-graph-editor>=0.1.0", "haywire-core>=0.1.0"]

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
testing = "haybale_testing:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_testing"]

[tool.uv.sources]
haywire-core = { workspace = true }
haybale-core = { workspace = true }
haybale-graph-editor = { workspace = true }

[tool.hatch.build.targets.sdist]
include = [
    "haybale_testing/",
    "README.md",
]
