[project]
name = "haybale-testing"
version = "0.0.8"
description = "Testing library for Haywire node system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "test"]

dependencies = ["haybale-core~=0.0.8", "haybale-graph-editor~=0.0.8", "haywire-core~=0.0.8", "nicegui>=3.12.1", "typing_extensions"]

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
testing = "haybale_testing:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_testing"]

[tool.hatch.build.targets.sdist]
include = [
    "haybale_testing/",
    "README.md",
]
