[project]
name = "haybale-visiongraph"
version = "0.0.3"
description = "Visiongraph library for Haywire node system demonstrating custom types, nodes, widgets, and renderers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "visiongraph"]

dependencies = [
    "haywire-core~=0.0.3",
    "haybale-core~=0.0.3",
    "visiongraph[all]",
    "numpy",
    "opencv-python",
    "fastapi",
    "nicegui",
]

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
visiongraph = "haybale_visiongraph:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_visiongraph"]

[tool.uv.sources]
haywire-core = { workspace = true }
haybale-core = { workspace = true }

[tool.hatch.build.targets.sdist]
include = [
    "haybale_visiongraph/",
    "README.md",
]
