[project]
name = "haybale-TEST_A"
version = "1.0.0"
description = "Test library for Haywire node system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "test"]

dependencies = ["haywire-framework>=0.1.0"]

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
test_a = "haybale_test_a:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_test_a"]

[tool.uv.sources]
haywire-framework = { workspace = true }

[tool.hatch.build.targets.sdist]
include = [
    "haybale_test_a/",
    "README.md",
]
