[project]
name = "haybale-example"
version = "1.0.0"
description = "Example library for Haywire node system demonstrating custom types, nodes, widgets, and renderers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "example"]

dependencies = []

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
example = "haybale_example:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_example"]

[tool.hatch.build.targets.sdist]
include = [
    "haybale_example/",
    "README.md",
]
