[project]
name = "haybale-visiongraph"
version = "0.0.1"
description = "Visiongraph library for Haywire node system demonstrating custom types, nodes, widgets, and renderers"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "visiongraph"]

dependencies = [
    "haybale-core>=1.0.0",
    "visiongraph[all]"]

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
visiongraph = "haybale_visiongraph:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_visiongraph"]

[tool.hatch.build.targets.sdist]
include = [
    "haybale_visiongraph/",
    "README.md",
]
