[project]
name = "haybale-TEST_B"
version = "1.0.0"
description = "Test library B for Haywire node system"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Haywire Team"}
]
keywords = ["haywire", "node-editor", "visual-programming", "test"]

dependencies = []

# Entry point for Haywire library discovery
[project.entry-points."haywire.libraries"]
test_b = "haybale_test_b:Library"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["haybale_test_b"]

[tool.hatch.build.targets.sdist]
include = [
    "haybale_test_b/",
    "README.md",
]
